src/test/ui/error-codes/E0110.stderr
<<<<<<< HEAD
error[E0110]: lifetime arguments are not allowed on this entity
  --> $DIR/E0110.rs:1:14
||||||| merged common ancestors
error[E0110]: lifetime parameters are not allowed on this type
  --> $DIR/E0110.rs:11:14
=======
error[E0110]: lifetime arguments are not allowed on this entity
  --> $DIR/E0110.rs:11:14
>>>>>>> Added regression test for using generic parameters on modules.
   |
LL | type X = u32<'static>; //~ ERROR E0110
   |              ^^^^^^^ lifetime argument not allowed

error: aborting due to previous error

For more information about this error, try `rustc --explain E0110`.
